# fibo-vcpkg-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: hosted-pure-workflow.yml
src/: main.cxx
vcpkg_manifest/: CMakeLists.txt
